--- a/.jscsrc
+++ b/.jscsrc
@@ -1,6 +1,6 @@
 {
+  "esnext": true,
   "preset": "google",
   "disallowSpacesInAnonymousFunctionExpression": null,
-  "excludeFiles": ["node_modules/**"],
-  "esnext": true
+  "excludeFiles": ["node_modules/**"]
 }
