--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "private": true,
   "devDependencies": {
+    "babel-preset-es2015": "^6.1.18",
     "browser-sync": "^2.7.7",
     "connect-history-api-fallback": "^1.1.0",
     "del": "^1.1.1",
     "glob": "^5.0.6",
     "gulp": "^3.8.5",
     "gulp-autoprefixer": "^2.1.0",
-    "gulp-babel": "^5.2.1",
+    "gulp-babel": "^6.1.0",
     "gulp-cache": "^0.2.8",
     "gulp-changed": "^1.0.0",
-    "gulp-crisper": "0.0.5",
+    "gulp-crisper": "^1.0.0",
     "gulp-cssmin": "^0.1.7",
     "gulp-flatten": "0.0.4",
     "gulp-if": "^1.2.1",
@@ -21,7 +22,7 @@
     "gulp-rename": "^1.2.0",
     "gulp-replace": "^0.5.3",
     "gulp-size": "^1.0.0",
-    "gulp-sourcemaps": "^1.5.2",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.2.0",
     "gulp-useref": "^1.1.2",
     "gulp-vulcanize": "^6.0.0",
